--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
          rel="icon"
          type="image/png"
          sizes="32x32"
-         href="./images/favicon-32x32.png"
+         href="favicon-32x32.png"
       />
 
       <link rel="stylesheet" href="style2.css">
@@ -20,7 +20,7 @@
          <section class="card_container">
             <div class="summary_card">
                <img
-                  src="./images/illustration-hero.svg"
+                  src="illustration-hero.svg"
                   class="summary_img"
                   alt="image"
                />
@@ -32,7 +32,7 @@
 
                <div class="annual_card">
                   <div class="annual_content">
-                     <img src="./images/icon-music.svg" alt="icon" />
+                     <img src="icon-music.svg" alt="icon" />
                      <div class="annual_text">
                         <h4>Annual Plan</h4>
                         <p>$59.99/year</p>
